[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringllm"
version = "0.1.0"
description = "Chain free LLMs together like strings to solve complex tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Samarth Bhamare", email = "bhamaresamarth@gmail.com"}]
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "ruff>=0.3",
    "httpx>=0.27",
]
docs = ["mkdocs-material>=9.0"]

[project.scripts]
stringllm = "server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
